--- a/themes/min/layouts/partials/header.html
+++ b/themes/min/layouts/partials/header.html
@@ -34,13 +34,8 @@
     <div class="col-xs-2">
         <div class="box">
             <div class="box">
-                <a href="/photo/">photo</a>
+                <a href="/photo/">photo/thoughts</a>
             </div>
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            <div class="box">thoughts</div>
         </div>
     </div>
 </div>
